# ai-product-research

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/ai_product_research/: app_context.py  main.py
src/ai_product_research/agents/: __init__.py  problem_retriever_agent.py  product_filter_agent.py
src/ai_product_research/domain/: __init__.py  analyzed_product.py  product_hunt.py
src/ai_product_research/services/: __init__.py  analyzed_products_telegram_channel_service.py  product_hunt.py  web_site_scrapper.py
src/ai_product_research/settings/: settings.py
src/ai_product_research/usecase/: __init__.py  telegram_products_research_use_case.py
tests/test_ai_product_research/: conftest.py
tests/test_ai_product_research/test_agents/: test_problem_retriever_agent.py  test_product_filter_agent.py
