[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-product-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-telegram-bot>=22.5",
    "rich>=13.9.4",
    "httpx>=0.28.1",
    "playwright>=1.49.1",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "langchain-google-genai>=4.1.2",
    "langchain>=1.2.0",
    "asyncio>=4.0.0",
    "langchain-openai>=1.1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_product_research"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
